<resources>
    <string name="app_name">Quick choice</string>
    <string name="link_game">https://play.google.com/store/apps/details?id=space.zelinskiy.quiz</string>
    <string name="chuserTitle">Send a link to the game</string>
    <string name="start">Play</string>
    <string name="back">Back</string>
    <string name="head_name">Quick</string>
    <string name="head_name2">choice</string>
    <string name="wordlevel">Level:</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="title_registration">Add your name</string>
    <string name="head_registration">Enter your registration data</string>
    <string name="back_registration">Cancel</string>
    <string name="ok_registration">ОК</string>
    <string name="name_registration">Enter your name</string>
    <string name="password_registration">Enter a password of at least 6 characters</string>
    <string name="add_registration">User added</string>
    <string name="error_registration">This name already exists</string>
    <string name="error_symbols">invalid characters\nuse only letters and numbers</string>
    <string name="levels">level"</string>
    <string name="average">average time"</string>
    <string name="not_internet">No internet connection"</string>
    <string name="text_continue">Start the game</string>
    <string name="text_continue_next">Next level</string>
    <string name="level_end1">Level complete."</string>
    <string name="level_end2">You did it in "</string>
    <string name="level_end3">It almost hit the record"</string>
    <string name="level_end_rec1">Congratulations!"</string>
    <string name="level_end_rec2">You did it in "</string>
    <string name="level_end_rec3">This is a new record!"</string>
    <string name="level_last1">Congratulations!"</string>
    <string name="level_last2">You did it in "</string>
    <string name="level_last3">Welcome to"</string>
    <string name="level_last4">leaderboard."</string>
    <string name="level_last5">Your average time for all levels: "</string>
    <string name="level_last6">You can pass any level again and improve your result."</string>
    <string name="btnBacktwice">Click again to exit</string>
    <string name="head_liders">Top players"</string>
    <string name="btn1">The numbers</string>
    <string name="btn2">Roman numerals</string>
    <string name="btn3">Letters</string>
    <string name="btn4">Clock</string>
    <string name="btn5">Color</string>
    <string name="btn6">Weight</string>
    <string name="btn7">Carrying capacity</string>
    <string name="btn8">Speed</string>
    <string name="btn9">Sound</string>
    <string name="btn10">The size</string>
    <string name="btn11">Price</string>
    <string name="btn12">Cold</string>
    <string name="btn13">Chess</string>
    <string name="btn14">Planets</string>
    <string name="btn15">Centenarians</string>
    <string name="btn16">Countries</string>
    <string name="btn17">Languages</string>
    <string name="btn18">Inventions</string>
    <string name="btn19">Calories</string>
    <string name="btn20">Cities</string>
    <string name="btn21">Height</string>
    <string name="btn22">Great people</string>
<!--    <string name="facebook_app_id" translatable="false">327199932177295</string>-->
<!--    <string name="fb_login_protocol_scheme" translatable="false">fb327199932177295</string>-->
    <string name="facebook_app_id" translatable="false">838960067024036</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb838960067024036</string>
    <string name="PolCon">Privacy Policy</string>
    <string name="PolSogl">Terms &amp; Conditions</string>


</resources>
