<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:textSize="24sp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black95"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"/>

                        <ImageView
                            android:id="@+id/img_lock1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/lock" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/btn2"
                            android:textColor="@color/white"
                            android:textSize="24sp"/>
                        <ImageView
                            android:id="@+id/img_lock2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/lock" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/btn3"
                            android:textColor="@color/white"
                            android:textSize="24sp"/>
                        <ImageView
                            android:id="@+id/img_lock3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/lock" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/btn4"
                            android:textColor="@color/white"
                            android:textSize="24sp"/>
                        <ImageView
                            android:id="@+id/img_lock4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/lock" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"
                            android:text="5"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:text="6"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:paddingLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/btn1"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>